--- a/terms.html
+++ b/terms.html
@@ -3,67 +3,107 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>利用規約・プライバシーポリシー</title>
-
+<title>利用規約・プライバシーポリシー | 文字数カウントツール</title>
 <link rel="stylesheet" href="style.css">
-
 <style>
-/* style.cssの読み込みに合わせてデザインを微調整 */
-body{font-family:"Noto Sans JP",system-ui,sans-serif;
-max-width:900px;margin:30px auto;padding:20px}
-section{background:var(--card);border-radius:12px;padding:20px;margin-bottom:20px; border:1px solid var(--border);}
+/* terms.html専用のレイアウト調整 */
+body {
+    max-width: 800px;
+    margin: 30px auto;
+    padding: 20px;
+}
+section {
+    background: var(--card);
+    border-radius: 14px;
+    padding: 20px;
+    margin-bottom: 30px;
+    border: 1px solid var(--border);
+}
 section h2 {
     color: var(--accent);
     border-bottom: 2px solid var(--accent-soft);
     padding-bottom: 5px;
+    margin-top: 0;
 }
-.back-link a {
-    color: var(--link);
-    text-decoration: none;
-    font-weight: bold;
+section h3 {
+    color: var(--text);
+    margin-top: 25px;
+    border-left: 4px solid var(--accent);
+    padding-left: 10px;
+}
+ol, ul {
+    margin: 15px 0;
+    padding-left: 20px;
 }
 </style>
 </head>
-<body data-theme="light_green"> <h1>利用規約・プライバシーポリシー</h1>
+<body data-theme="light_green">
+<h1>利用規約・プライバシーポリシー</h1>
 
-<section>
-<h2>利用規約</h2>
-<h3>1. 適用範囲と同意</h3>
-<p>本文字数カウント&保存ツール（以下、本ツール）の利用に関わる一切に、本規約が適用されます。ユーザーは、**本ツールを利用した時点をもって本規約の全ての内容に同意したものとみなします。**</p>
-<p>なお、これらの規約やポリシーは、ユーザーの承諾を得ることなく改定されることがあります。改定後の規約は、本ページに掲載された時点から効力を生じるものとします。</p>
+<section id="terms">
+    <h2>利用規約</h2>
+    
+    <h3>第1条 本規約の適用</h3>
+    <p>本規約は、篠ノ井乗務区（以下「当開発者」という）が提供する文字数カウントツール（以下「本ツール」という）の利用に関する一切に適用されます。</p>
 
-<h3>2. 利用目的と制限</h3>
-<p>本ツールは非商用・個人利用に限り使用できます。法令または公序良俗に反する行為、ツールの運営を妨げる行為、その他本ツールが不適切と判断する行為を禁止します。</p>
+    <h3>第2条 利用料金</h3>
+    <p>本ツールは無料で利用できます。ただし、本ツールへのアクセスやコンテンツの利用に伴う通信費、インターネット接続費等は、利用者ご自身のご負担となります。</p>
 
-<h3>3. 免責事項</h3>
-<p>本ツールの利用によってユーザーに生じた損害や、ツールの提供の中断・中止、または仕様の変更によって生じた損害について、当方は一切の責任を負いません。ご利用はユーザー自身の判断と責任において行ってください。</p>
+    <h3>第3条 データの取り扱い</h3>
+    <ol>
+        <li>本ツールの入力エリアに入力されたテキストデータは、サーバーには一切送信・保存されません。すべての計測およびファイル保存の処理は、利用者の端末内で行われます。</li>
+        <li>ツールの設定（テーマ、文字数制限、広告表示設定など）は、ブラウザのローカルストレージにのみ保存されます。</li>
+    </ol>
+
+    <h3>第4条 禁止事項</h3>
+    <p>利用者は、本ツールの利用にあたり、次の行為を行ってはならないものとします。</p>
+    <ul>
+        <li>本ツールの運営を妨害する行為。</li>
+        <li>本ツールを構成するソフトウェア、画像、デザイン等を複製、改変、頒布する行為。</li>
+        <li>公序良俗に反する目的での利用。</li>
+    </ul>
+
+    <h3>第5条 免責事項</h3>
+    <ul>
+        <li>当開発者は、本ツールの利用によって生じた、いかなる損害についても一切の責任を負いません。</li>
+        <li>当開発者は、本ツールの計測結果の正確性、完全性、信頼性を保証するものではありません。</li>
+        <li>当開発者は、本ツールの提供を予告なく中止または終了できるものとします。</li>
+    </ul>
 </section>
 
 <section id="privacy">
-<h2>プライバシーポリシー</h2>
+    <h2>プライバシーポリシー</h2>
 
-<h3>1. 入力データの取り扱い</h3>
-<p>ユーザーが本ツールに入力したテキストデータは、**すべて端末内（ブラウザ）でのみ処理・保存されます。** 当方のサーバーへ送信されることは一切ありません。</p>
+    <h3>個人情報の定義</h3>
+    <p>本プライバシーポリシーにおける「個人情報」とは、個人情報保護法に定める個人情報（氏名、生年月日、その他の記述等により特定の個人を識別できる情報）を指します。</p>
 
-<h3>2. アクセス情報の収集</h3>
-<p>本ツールでは、アクセス状況の把握のため、Google Apps Script (GAS) を利用した**アクセスカウンターを設置しています。** このカウンターが記録するのはアクセス日時のみであり、ユーザーの個人を特定できる情報は一切収集しません。</p>
+    <h3>本ツールで収集する情報</h3>
+    <p>本ツールは、利用者の個人を特定できる情報を収集していません。しかし、以下の情報をツール改善、サーバー負荷測定、および広告配信のために収集・利用しています。</p>
+    <ol>
+        <li><strong>アクセスログ:</strong> アクセスカウンターGASを通じて、アクセス日時、国、アクセス元のリファラー（参照元URL）などの匿名化された情報を収集しています。これは主にツールの利用状況把握を目的としています。</li>
+        <li><strong>広告配信サービス:</strong> 本ツールでは、収益化のため、第三者の広告配信サービス（例：Google AdSense、しのび.jp）を利用しています。これらの広告配信事業者は、利用者の興味に応じた広告を表示するために、Cookieを使用することがあります。</li>
+    </ol>
 
-<h3>3. 広告配信について</h3>
-<p>本ツールでは、収益化のため外部広告配信サービスを利用しています。これにより、広告サービス事業者がCookieなどの情報を収集する場合があります。情報収集の詳細は、各広告サービスのプライバシーポリシーをご確認ください。</p>
+    <h3>Cookieについて</h3>
+    <p>Cookieは、利用者がウェブサイトを閲覧した際に、利用者のコンピューターに保存される小さなファイルです。</p>
+    <ul>
+        <li><strong>ツールの機能用Cookie:</strong> デザインテーマや文字数制限、自動保存テキストなどの設定は、ツールの利便性向上のため、利用者のブラウザのローカルストレージに保存されます。</li>
+        <li><strong>広告用Cookie:</strong> 広告配信事業者により使用されます。利用者は、ブラウザの設定を変更することで、Cookieの使用を無効にできます。</li>
+    </ul>
 
-<h3>4. 設定の保存（ローカルストレージ）</h3>
-<p>表示モード（スマホ/PC）、広告の表示/非表示設定、カスタム文字数制限は、お客様のブラウザの**ローカルストレージに保存されます。** これらの設定はいつでも**設定画面（settings.html）で変更**することが可能です。</p>
+    <h3>プライバシーポリシーの変更</h3>
+    <p>本プライバシーポリシーの内容は、利用者に通知することなく変更されることがあります。変更後のプライバシーポリシーは、本ページに掲載された時点から効力を生じるものとします。</p>
+
+    <h3>お問い合わせ窓口</h3>
+    <p>本ポリシーに関するお問い合わせは、制作者紹介ページに記載された連絡先までお願いいたします。</p>
 </section>
 
-<p class="back-link"><a href="index.html">トップへ戻る</a></p>
-
 <script>
-// テーマ設定の適用
+// テーマ設定の適用 (ローカルストレージから読み込み)
 const savedTheme = localStorage.getItem('theme');
 if (savedTheme) {
     document.body.setAttribute('data-theme', savedTheme);
 }
 </script>
-
 </body>
 </html>
