--- a/terms.html
+++ b/terms.html
@@ -98,6 +98,8 @@ ol, ul {
     <p>本ポリシーに関するお問い合わせは、制作者紹介ページに記載された連絡先までお願いいたします。</p>
 </section>
 
+<p style="text-align: center; margin-top: 30px;"><a href="counter.html">ツール画面に戻る</a></p>
+
 <script>
 // テーマ設定の適用 (ローカルストレージから読み込み)
 const savedTheme = localStorage.getItem('theme');
