--- a/help.html
+++ b/help.html
@@ -138,7 +138,7 @@ ul {
     </ol>
 </section>
 
-<p class="back-link"><a href="counter.html">ツール画面に戻る</a></p>
+<p class="back-link" style="text-align: center;"><a href="counter.html">ツール画面に戻る</a></p>
 
 <script>
 // テーマ設定の適用 (ローカルストレージから読み込み)
