--- a/counter.html
+++ b/counter.html
@@ -107,7 +107,7 @@ function fetchAccessCount() {
 window.addEventListener('load', fetchAccessCount);
 
 // === お知らせの読み込みとNEWマーク表示 ===
-// ★ お知らせ用GAS URLを設定
+// ★ お知らせ用GAS URLを設定 (修正済み)
 const NOTICE_GAS_URL = "https://script.google.com/macros/s/AKfycbxmgrljU-iNc8kpe7uZ3fDIAYGjE9JNq5ENi8wG6w7mPcBbg5F601rosrJ4ZNVUOUg/exec"; 
 
 fetch(NOTICE_GAS_URL)
