--- a/index.html
+++ b/index.html
@@ -1,83 +1,44 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>文字数カウント 保存ツール</title>
-<link rel="stylesheet" href="style.css">
-<link rel="canonical" href="https://28475-train.github.io/char-counter/index.html">
-<meta property="og:title" content="【リアルタイム】文字数カウント・保存ツール">
-<meta property="og:description" content="リアルタイムで文字数と行数を即座に計測する無料ツール。ファイル保存機能付き。">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://28475-train.github.io/char-counter/index.html">
-<meta property="og:image" content="https://28475-train.github.io/char-counter/images/tool_image.png">
-<meta property="og:site_name" content="文字数カウントツール">
-<meta name="twitter:card" content="summary_large_image">
-<style>
-/* index.html固有のスタイル */
-body{font-family:"Noto Sans JP",system-ui,sans-serif;
-max-width:720px;margin:30px auto;padding:20px; text-align:center;}
-.agreement-card{
-  background:var(--card);
-  border-radius:14px;
-  padding:20px;
-  margin-top:50px;
-  border:1px solid var(--border);
-  text-align:left;
-}
-.agreement-card h2{
-    color: var(--accent);
-    border-bottom: 1px dashed var(--border);
-    padding-bottom: 10px;
-}
-.agree-btn{
-  display:block;
-  width:100%;
-  padding:12px;
-  margin-top:20px;
-  background:var(--accent);
-  /* color:#fffをCSS変数に変更し、テーマが反映されるように調整 */
-  color: var(--card); 
-  font-weight:bold;
-  border:none;
-  border-radius:8px;
-  cursor:pointer;
-  text-align:center;
-  text-decoration: none;
-}
-.agree-btn:hover{
-    filter: brightness(1.1);
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ようこそ | ツール</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body data-theme="light_green">
-<h1>文字数カウント 保存ツールへようこそ</h1>
-<div class="agreement-card">
-    <h2>ご利用にあたっての同意</h2>
-    <p>本ツールは、利用規約およびプライバシーポリシーに同意の上、ご利用いただけます。</p>
-    <ul style="font-size: 0.9em; padding-left: 20px;">
-        <li>データの処理 保存はすべてお使いの端末内で行われます。</li>
-        <li>アクセス状況の把握のため、アクセスカウンターを設置しています。</li>
-        <li>収益化のため、広告が表示されます（設定で非表示にできます）。</li>
-    </ul>
-    <p style="margin-top: 15px;">詳細については、<a href="terms.html" style="color: var(--link); text-decoration: none; font-weight: bold;">利用規約 プライバシーポリシー</a>をご確認ください。</p>
-    <button class="agree-btn" onclick="agreeAndRedirect()">同意してツールを使う</button>
-</div>
+<body>
+
 <script>
-// テーマの適用
-const savedTheme = localStorage.getItem('theme');
-if (savedTheme) {
-    document.body.setAttribute('data-theme', savedTheme);
-}
-// 同意処理
-function agreeAndRedirect() {
-    localStorage.setItem('agreed', 'true');
-    location.href = 'counter.html';
-}
-// 同意済みなら直接ツールへ
-if (localStorage.getItem('agreed') === 'true') {
-    location.href = 'counter.html';
+// SP/PC振り分け判定
+const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+// 画面が index.html であるため、必ず同意画面が表示されます。
+
+function agreeAndProceed() {
+    // ローカルストレージへの 'agreed' フラグ設定は行いません（毎回同意のため）
+    
+    if (isMobile) {
+        // SPユーザーは SP/index.html へリダイレクト
+        location.href = 'SP/index.html';
+    } else {
+        // PCユーザーは counter.html へリダイレクト
+        location.href = 'counter.html';
+    }
 }
 </script>
+
+<div style="max-width: 600px; margin: 50px auto; padding: 20px; border: 1px solid #ccc; text-align: center;">
+    <h1>ツール利用規約への同意</h1>
+    <p>このツールをご利用いただく前に、以下の利用規約に**毎回**ご同意ください。</p>
+    <ul>
+        <li>Cookieおよびローカルストレージに設定情報（テーマ、カウンター値など）を保存します。</li>
+        <li>広告を表示します。</li>
+        <li>アクセス情報を取得する場合があります。</li>
+    </ul>
+    <button onclick="agreeAndProceed()" style="padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">
+        同意して利用開始
+    </button>
+</div>
+
 </body>
 </html>
