--- a/SP/roulette.html
+++ b/SP/roulette.html
@@ -6,42 +6,16 @@
 <title>【SP版】カスタム ルーレット・カウントダウン</title>
 <meta name="description" content="目標回数、開始時刻、ルーレットモードを自由に設定できるカスタムカウンターツールです。">
 <link rel="stylesheet" href="../style.css">
-<style>
-/* ルーレット専用CSS (前回の回答と同じ) */
-/* SP版ではサイズを小さく調整することも推奨されますが、ここではPC版と同じ定義を使用 */
-/* ... roulette-wrapper, roulette-circle などのCSS定義は省略 ... */
-</style>
 </head>
 <body data-theme="light_green">
 <script>
 // --- バージョン情報 ---
 const APP_VERSION = "v1.2.0"; 
 // ----------------------
-
-// SP/PC振り分け判定
-const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-
-if (!isMobile) {
-    location.href = '../counter.html'; // PC版カウンターへリダイレクト
-} else {
-    // ページを直接開いた場合は SP/index.html へ戻す
-    if (!document.referrer.includes('SP/index.html')) {
-        location.href = 'index.html'; 
-    }
-}
-
-// 既存の設定ロード (テーマ、広告など) - 簡略化
-const savedTheme = localStorage.getItem('theme');
-if (savedTheme) { document.body.setAttribute('data-theme', savedTheme); }
-const hideAds = localStorage.getItem('hideAds') === 'true';
-if (hideAds) { document.body.setAttribute('data-ads', 'false'); }
+// SP/PC振り分け判定 (省略)
+function toggleMenu() { document.getElementById('sideNav').classList.toggle('open'); }
+window.onload = function() { document.getElementById('appVersionDisplay').textContent = APP_VERSION; }
 </script>
-
-<div class="top-ad-header" style="height: 50px;">
-    <div id="ad-area-top-sp">
-        AD: SP Top Banner 320x50
-    </div>
-</div>
 
 <div class="main-content-area">
 
@@ -49,6 +23,12 @@ if (hideAds) { document.body.setAttribute('data-ads', 'false'); }
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <a href="counter.html" class="header-title" style="font-size: 1.2em;">🎲 ルーレット (SP版)</a>
     </header>
+
+    <div class="top-ad-header" style="height: 50px;">
+        <div id="ad-area-top-sp">
+            <script src="https://adm.shinobi.jp/o/b4938a5bb7d245347d3a4f3bf5b38328"></script>
+            </div>
+    </div>
 
     <nav class="side-nav" id="sideNav">
         <a href="counter.html">📝 文字数カウント</a> 
@@ -65,18 +45,12 @@ if (hideAds) { document.body.setAttribute('data-ads', 'false'); }
 
 <div class="bottom-ad-footer" style="height: 50px;">
     <div id="ad-area-bottom-sp">
-        AD: SP Bottom Banner 320x50
-    </div>
+        <script src="https://adm.shinobi.jp/o/b4938a5bb7d245347d3a4f3bf5b38328"></script>
+        </div>
 </div>
 
 <footer class="footer" style="text-align:center; padding: 20px 0; font-size: 0.8em; color: var(--text-soft);">
     <p>Version <span id="appVersionDisplay"></span></p>
 </footer>
-
-<script>
-function toggleMenu() { document.getElementById('sideNav').classList.toggle('open'); }
-document.getElementById('appVersionDisplay').textContent = APP_VERSION;
-// (ルーレット/カウントダウンロジックは省略)
-</script>
 </body>
 </html>
