--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ window.onload = function() {
             <h1>制作者情報</h1>
             
             <h2>ツールについて</h2>
-            <p>このツールは、28475-trainによって開発・公開されています。</p>
+            p>このツールは、篠ノ井乗務区によって開発・公開されています。このツー
             <p>バージョン: <span id="versionDisplay"></span></p>
 
             <h2>免責事項</h2>
